--- a/main.html
+++ b/main.html
@@ -11,7 +11,15 @@
       <div class="upperEmptySpace">빈공간</div>
       <div class="upperLeftSpace">
         <div class="logo">로고</div>
-        <nav>메뉴</nav>
+        <nav>
+          <ol>
+            <li class="one"><a href="#">메뉴1</a></li>
+            <li class="two"><a href="#">메뉴2</a></li>
+            <li class="three"><a href="#">메뉴3</a></li>
+            <li class="four"><a href="#">메뉴4</a></li>
+            <li class="five"><a href="#">메뉴5</a></li>
+          </ol>
+        </nav>
       </div>
       <div class="mainButton">메인버튼</div>
     </header>
